# YOLO_embedded

./: LICENSE  README.md  install_openvino.sh
cpp/OpenVINO/: CMakeLists.txt  README.md
cpp/TensorRT/: CMakeLists.txt  DataServer.py  README.md  main.cpp  run.py  setup.sh
files/xml/: yolox_nano.xml
python/: README.md  main.py  predict.py  requirements.txt
python/models/: OpenVINO.py  TensorRT.py
python/models/detect/: __init__.py  nms.py  visual.py
